[MOD] fixed too long conversation names, added popup to show reported conversation

--- a/src/css/pages/reportChecking.scss
+++ b/src/css/pages/reportChecking.scss
@@ -181,6 +181,11 @@
               font-weight: 600;
               color: black;
               margin-left: 20px;
+
+              .report-chat-icon {
+                width: 20px;
+                cursor: pointer;
+              }
             }
 
             .report-btn {
